# python-for-oorexx

./: .gitignore  CMakeLists.txt  PyRexx.cls  PyRexx.cpp  README.md  make.cmd  ooRexxAPI.cpp  pyrexx.py  testOORexx.rex
.github/workflows/: c-cpp.yml
framework/: OOREXXUNIT.CLS  ooTest.frm  worker.rex
src/: orxpython.cls  orxpython.cpp  orxpython.py  pyrexx.py  python.cls  python.cpp
test/: PyRexx.testGroup  arguments.testGroup  bool.testGroup  builtins.testGroup  dict.testGroup  float.testGroup  int.testGroup  list.testGroup  python.cls.testGroup  set.testGroup  slice.testGroup  str.testGroup  tuple.testGroup
test/ooRexx/: environments.testGroup  indexing.testGroup
test/oorexx-lang/: api.testGroup  environments.testGroup
test/python-lang/: test_importlib.py  test_operator.py
test/python-lang/foo/bar/: baz.py
test/stdlib/: csv.testGroup  datetime.testGroup  html.parser.testGroup  json.testGroup  logging.testGroup  random.testGroup  sqlite3.testGroup  urllib.request.testGroup  uuid.testGroup
